--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,17 +40,17 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
-  color:black;
+  background-color:lightgray;
+  color: black;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: red;
   color: black;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: lightgreen;
   color: black;
 }
 
